--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "cordova-plugin-camera",
+  "name": "cordova-plugin-camera-equeo",
   "version": "6.0.2",
   "description": "Cordova Camera Plugin",
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "cordova-plugin-camera",
+    "id": "cordova-plugin-camera-equeo",
     "platforms": [
       "android",
       "ios",
@@ -13,8 +13,6 @@
       "osx"
     ]
   },
-  "repository": "github:apache/cordova-plugin-camera",
-  "bugs": "https://github.com/apache/cordova-plugin-camera/issues",
   "keywords": [
     "cordova",
     "camera",
