--- a/plugin.xml
+++ b/plugin.xml
@@ -20,14 +20,12 @@
 
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    id="cordova-plugin-camera"
+    id="cordova-plugin-camera-equeo"
     version="6.0.2">
     <name>Camera</name>
     <description>Cordova Camera Plugin</description>
     <license>Apache 2.0</license>
     <keywords>cordova,camera</keywords>
-    <repo>https://github.com/apache/cordova-plugin-camera</repo>
-    <issue>https://github.com/apache/cordova-plugin-camera/issues</issue>
 
     <engines>
         <engine name="cordova" version=">=9.0.0"/>
